--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="HelloWorld">
+    <wb-module deploy-name="xebia-bcp7-week-05-master">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <property name="context-root" value="HelloWorld"/>
-        <property name="java-output-path" value="/HelloWorld/build/classes"/>
+        <property name="java-output-path" value="/xebia-bcp7-week-05-master/build/classes"/>
+        <property name="context-root" value="xebia-bcp7-week-05-master"/>
     </wb-module>
 </project-modules>
